// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`time series Automation add-on OverallTimeSaved should render expected query snapshot 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "AutomationBillingEvent.periodStart",
        "operator": "afterDate",
        "values": [
          "2021-05-29T00:00:00.000",
        ],
      },
      {
        "member": "AutomationBillingEvent.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2021-06-04T23:59:59.000",
        ],
      },
      {
        "member": "Ticket.channel",
        "operator": "equals",
        "values": [
          "help-center",
          "chat",
        ],
      },
      {
        "member": "AutomationBillingEvent.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2021-06-04T23:59:59+02:00",
        ],
      },
    ],
    "measures": [
      "AutomationBillingEvent.automatedInteractionsByTrackOrder",
      "AutomationBillingEvent.automatedInteractionsByLoopReturns",
      "AutomationBillingEvent.automatedInteractionsByQuickResponse",
      "AutomationBillingEvent.automatedInteractionsByArticleRecommendation",
      "AutomationBillingEvent.automatedInteractionsByAutomatedResponse",
      "AutomationBillingEvent.automatedInteractionsByQuickResponseFlows",
      "AutomationBillingEvent.automatedInteractionsByAutoResponders",
    ],
    "timeDimensions": [
      {
        "dateRange": [
          "2021-05-29T00:00:00.000",
          "2021-06-04T23:59:59.000",
        ],
        "dimension": "AutomationBillingEvent.createdDate",
        "granularity": "day",
      },
    ],
    "timezone": "UTC",
  },
]
`;

exports[`time series Automation add-on useAutomatedInteractionTimeSeries should render expected query snapshot 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "AutomationBillingEvent.periodStart",
        "operator": "afterDate",
        "values": [
          "2021-05-29T00:00:00.000",
        ],
      },
      {
        "member": "AutomationBillingEvent.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2021-06-04T23:59:59.000",
        ],
      },
      {
        "member": "Ticket.channel",
        "operator": "equals",
        "values": [
          "help-center",
          "chat",
        ],
      },
      {
        "member": "AutomationBillingEvent.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2021-06-04T23:59:59+02:00",
        ],
      },
    ],
    "measures": [
      "AutomationBillingEvent.automatedInteractions",
    ],
    "timeDimensions": [
      {
        "dateRange": [
          "2021-05-29T00:00:00.000",
          "2021-06-04T23:59:59.000",
        ],
        "dimension": "AutomationBillingEvent.createdDate",
        "granularity": "day",
      },
    ],
    "timezone": "UTC",
  },
]
`;

exports[`time series Automation add-on useAutomationRateTimeSeries should render expected query snapshot 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "AutomationBillingEvent.periodStart",
        "operator": "afterDate",
        "values": [
          "2021-05-29T00:00:00.000",
        ],
      },
      {
        "member": "AutomationBillingEvent.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2021-06-04T23:59:59.000",
        ],
      },
      {
        "member": "Ticket.channel",
        "operator": "equals",
        "values": [
          "help-center",
          "chat",
        ],
      },
      {
        "member": "AutomationBillingEvent.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2021-06-04T23:59:59+02:00",
        ],
      },
    ],
    "measures": [
      "AutomationBillingEvent.automationRate",
    ],
    "timeDimensions": [
      {
        "dateRange": [
          "2021-05-29T00:00:00.000",
          "2021-06-04T23:59:59.000",
        ],
        "dimension": "AutomationBillingEvent.createdDate",
        "granularity": "day",
      },
    ],
    "timezone": "UTC",
  },
]
`;

exports[`time series useTicketsClosedTimeSeries should create reporting filters 1`] = `
[
  {
    "dimensions": [],
    "filters": [
      {
        "member": "Ticket.periodStart",
        "operator": "afterDate",
        "values": [
          "2021-05-29T00:00:00.000",
        ],
      },
      {
        "member": "Ticket.periodEnd",
        "operator": "beforeDate",
        "values": [
          "2021-06-04T23:59:59.000",
        ],
      },
      {
        "member": "TicketMessages.integration",
        "operator": "equals",
        "values": [
          "1",
        ],
      },
      {
        "member": "Ticket.channel",
        "operator": "equals",
        "values": [
          "email",
          "chat",
        ],
      },
      {
        "member": "Ticket.assigneeUserId",
        "operator": "equals",
        "values": [
          "2",
        ],
      },
      {
        "member": "Ticket.tags",
        "operator": "equals",
        "values": [
          "1",
          "2",
        ],
      },
      {
        "member": "Ticket.isTrashed",
        "operator": "equals",
        "values": [
          "0",
        ],
      },
      {
        "member": "Ticket.isSpam",
        "operator": "equals",
        "values": [
          "0",
        ],
      },
    ],
    "measures": [
      "Ticket.ticketCount",
    ],
    "order": [
      [
        "Ticket.closedDatetime",
        "asc",
      ],
    ],
    "segments": [
      "Ticket.closedTickets",
    ],
    "timeDimensions": [
      {
        "dateRange": [
          "2021-05-29T00:00:00.000",
          "2021-06-04T23:59:59.000",
        ],
        "dimension": "Ticket.closedDatetime",
        "granularity": "week",
      },
    ],
    "timezone": "America/Los_angeles",
  },
]
`;
